<resources>
    <string name="app_name">运维保障平台测试版</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="login_number">请输入您的账号</string>
    <string name="login_password">请输入您的密码</string>
    <string name="login_userregistration">用户注册</string>
    <string name="login_fwqsz">服务器设置</string>
    <string name="register_password">请再次输入您的密码</string>
    <string name="register_verificationcode">请输入验证码</string>
    <string name="register_sendout">发送验证码</string>
    <string name="register_read">我已经阅读并同意</string>
    <string name="register_clause">使用条款和隐私政策</string>
    <string name="confirm">确认</string>
    <string name="copyright">中航安科版权所有 © 1994-2017</string>
    <string name="zhonghang">中航安科提供计算服务</string>
    <string name="add_friend">添加好友</string>
    <string name="add_follow">添加关注</string>
    <string name="send_message">发送消息</string>
    <string name="Log_off">注销登录</string>
    <string name="qymc">企业名称</string>
    <string name="sshy">所属行业</string>
    <string name="xzqumc">行政区域</string>
    <string name="frdbmc">法人姓名</string>
    <string name="fryddh">法人手机号</string>
    <string name="frgddh">法人座机号</string>
    <string name="qyszd">企业地址</string>
    <string name="qyzyfzr">负责人姓名</string>
    <string name="qyzyfzryddh">负责人手机号</string>
    <string name="qyzyfzrgddh">负责人座机号</string>
    <string name="yyzzbh">营业执照编号</string>
    <string name="clrq">成立日期</string>
    <string name="qylx">企业类型</string>
    <string name="jyfw">经营范围</string>
    <string name="zcdz">注册地址</string>
    <string name="scjyzt">生产经营状态</string>
    <string name="tchzxsj">停产或注销时间</string>
    <string name="dw">定位</string>
    <string name="wsbh">文书编号</string>
    <string name="jccs">检查场所</string>
    <string name="fddbr">法定代表人</string>
    <string name="zw">职务</string>
    <string name="lxdh">联系电话</string>
    <string name="jcsj">检查时间</string>
    <string name="jssj">结束时间</string>
    <string name="jcqk">检查情况</string>
    <string name="xzczwt">选择存在问题</string>
    <string name="bjczwtnr">编辑存在问题内容</string>
    <string name="yj">依据</string>
    <string name="xccljd">现场处理决定</string>
    <string name="xzzfjg">行政执法机关</string>
    <string name="jcfs">检查方式</string>
    <string name="jcjtsx">检查具体事项</string>
    <string name="qtzfry">其他执法人员</string>
    <string name="GEN_tip">提示</string>
    <string name="GEN_open">打开</string>
    <string name="GEN_close">关闭</string>
    <string name="GEN_message">消息</string>
    <string name="GEN_contact">联系人</string>
    <string name="GEN_function">功能</string>
    <string name="GEN_setting">设置</string>
    <string name="GEN_Send">发送</string>
    <string name="enter">确认</string>
    <string name="back">返回</string>
    <string name="GEN_back">返回</string>
    <string name="GEN_picture">图片</string>
    <string name="GEN_download">下载</string>
    <string name="GEN_noconnection_tip">没有任何网络连接,请打开数据连接或连接WIFI!</string>
    <string name="GEN_modify">修改</string>
    <string name="GEN_modify_fail">修改失败</string>
    <string name="GEN_modify_success">修改成功</string>
    <string name="GEN_link_success">关联成功</string>
    <string name="GEN_link_fail">关联失败</string>
    <string name="GEN_add">增加</string>
    <string name="GEN_save">保存</string>
    <string name="GEN_sync">同步</string>
    <string name="GEN_clean">清除已同步任务</string>
    <string name="GEN_saveing">正在保存</string>
    <string name="GEN_save_fail">保存失败</string>
    <string name="GEN_save_success">保存成功</string>
    <string name="GEN_please_choose">请选择</string>
    <string name="GEN_please_click_choose">请单击选择</string>
    <string name="GEN_major_hazard">重大隐患</string>
    <string name="GEN_general_hazard">一般隐患</string>
    <string name="GEN_no_hazard">无隐患</string>
    <string name="GEN_hazard_grade">隐患级别</string>
    <string name="GEN_disposal_situation">处置情况</string>
    <string name="GEN_field_rectification">现场整改</string>
    <string name="GEN_deadline_rectification">限期整改</string>
    <string name="GEN_deadline_rectification_time">限期整改时间</string>
    <string name="GEN_shut_down">关停</string>
    <string name="GEN_unqualified">不合格</string>
    <string name="GEN_qualified">合格</string>
    <string name="GEN_printtext">打印合格项</string>
    <string name="GEN_unPrinttext">不打印合格项</string>
    <string name="GEN_xcjcjldypz">现场检查记录打印设置</string>
    <string name="GEN_ServiceName">安全目标消息服务</string>
    <string name="GEN_NewMessage">新消息</string>
    <string name="GEN_SendMessage">发送消息</string>
    <string name="GEN_Agree">同意</string>
    <string name="GEN_Refuse">拒绝</string>
    <string name="GEN_cant_connection">无法连接到服务器!</string>
    <string name="GEN_leave">离开群聊</string>
    <string name="GEN_delete">删除</string>
    <string name="GEN_enter">确定</string>
    <string name="GEN_cancle">取消</string>
    <string name="GEN_exit">退出</string>
    <string name="GEN_search">搜索</string>
    <string name="GEN_login">登陆</string>
    <string name="GEN_logout">注销</string>
    <string name="GEN_account">账号</string>
    <string name="GEN_password">密码</string>
    <string name="GEN_detail">详细资料</string>
    <string name="GEN_update_contact">更新联系人列表</string>
    <string name="GEN_company_target"> 为了安全, 连接一切 !</string>
    <string name="GEN_contact_type_both">已成为好友</string>
    <string name="GEN_contact_type_to">已发送请求</string>
    <string name="GEN_contact_type_from">对方的请求</string>
    <string name="GEN_contact_type_none">可能相识</string>
    <string name="TIP_Main_message01">由于网络原因 无法登录到服务器.</string>
    <string name="TIP_Main_message02">正在连接到聊天服务器...</string>
    <string name="TIP_Main_message03">正在登录到聊天服务器...</string>
    <string name="TIP_Main_message04">正在更新联系人信息...</string>
    <string name="TIP_Main_message05">更新联系人成功</string>
    <string name="TIP_Main_message06">失败 请稍后再试!</string>
    <string name="TIP_Login_message01">请输入用户名和密码!</string>
    <string name="TIP_Login_message02">登陆失败,请核对用户名和密码是否正确!</string>
    <string name="TIP_Login_message03">正在验证用户...</string>
    <string name="TIP_Login_message04">没有任何数据,请稍后再试!</string>
    <string name="TIP_Login_message05">正在登陆到聊天服务器...</string>
    <string name="TIP_Login_message06">登陆到聊天服务器失败!</string>
    <string name="TIP_Login_message07">正在更新联系人信息...</string>
    <string name="TIP_Login_message08">获取联系人信息失败,请稍后重试!</string>
    <string name="TIP_Login_message09">由于网络原因 无法登录到服务器.</string>
    <string name="TIP_Chat_message04">发送消息失败,对方拒绝了你的消息!</string>
    <string name="TIP_Chat_message05">发送消息失败,请稍后重试!</string>
    <string name="TIP_Chat_message01">请输入想要发送的消息!</string>
    <string name="TIP_Chat_message02">发送信息失败</string>
    <string name="TIP_Search_Message01">请输入会员名</string>
    <string name="TIP_Search_Message02">正在获取资料...</string>
    <string name="TIP_Search_Message05">正在发送好友请求!</string>
    <string name="TIP_Search_Message03">好友请求发送成功!</string>
    <string name="TIP_Search_Message04">好友请求发送失败!</string>
    <string name="TIP_Friend_Validate_Message01">正在发送请求结果!</string>
    <string name="TIP_Friend_Validate_Message02">发送请求结果成功!</string>
    <string name="TIP_Friend_Validate_Message03">发送请求结果错误,请稍后再试!</string>
    <string name="TIP_Friend_Validate_Message04">取消了和你的好友关系</string>
    <string name="TIP_Friend_Validate_Message05">请求和你成为好友</string>
    <string name="TIP_Friend_Validate_Message06">通过了你的好友请求</string>
    <string name="TIP_Friend_Validate_Message07">正在获取用户信息!</string>
    <string name="TIP_CreateRoom_Message01">建立多人聊天成功!</string>
    <string name="TIP_CreateRoom_Message02">建立多人聊天失败!</string>
    <string name="TIP_XmppManager_message01">发现新的历史消息</string>
    <string name="GEN_me">我</string>
    <string name="GEN_push_talk">按住说话</string>
    <string name="TIP_RecordButton_Message01">时间太短</string>
    <string name="TIP_RecordButton_Message02">取消录音</string>
    <string name="GEN_MessageType_Sound">[语音]</string>
    <string name="GEN_User_Search">用户搜索</string>
    <string name="GEN_Create_Room">发起群聊</string>
    <string name="GEN_Group_Chat">群聊</string>
    <string name="GEN_New_Contact">新的朋友</string>
    <string name="GEN_Push_Speak">按住说话</string>
    <string name="GEN_Recording">正在录制</string>
    <string name="GEN_muchat">多人聊天</string>
    <string name="TIP_Group_Detail_Message01">正在获取群聊成员列表</string>
    <string name="TIP_Group_Detail_Message02">正在离开这个群聊...</string>
    <string name="TIP_Group_Detail_Message03">离开群聊成功!</string>
    <string name="TIP_Group_Detail_Message04">离开群聊成功!</string>
    <string name="TIP_Invite_Friend_Message01">正在发送邀请!</string>
    <string name="TIP_Invite_Friend_Message02">发送邀请成功!</string>
    <string name="TIP_Invite_Friend_Message03">发送邀请失败,请稍后再试!</string>
    <string name="TIP_UpdateManager_message01">发现新的版本,是否立刻更新!</string>
    <string name="TIP_UpdateManager_message02">确认更新</string>
    <string name="TIP_UpdateManager_message03">稍后更新</string>
    <string name="TIP_UpdateManager_message04">下载</string>
    <string name="TIP_UpdateManager_message05">无法连接到APP更新服务器</string>
    <string name="GEN_code">执法编号</string>
    <string name="GEN_Contact_phone">联系电话</string>
    <string name="GEN_Contact_department">所属部门</string>
    <string name="GEN_Contact_region">所属地区</string>
    <string name="xcjcjldypz">现场检查记录打印设置</string>
    <string name="printtext">打印合格项</string>
    <string name="unPrinttext">不打印合格项</string>
    <string name="GEN_please_click_choose_date">请单击选择时间</string>
    <string name="company_primary_info">企业基础信息</string>
    <string name="GEN_necessary">必须填写</string>
    <string name="CompanyDetailMessage01">保存企业成功!</string>
    <string name="CompanyDetailMessage02">确认离开这个行业吗？</string>
    <string name="GEN_OperationSuccess">操作成功!</string>
    <string name="GEN_DataSync">数据同步</string>
    <string name="TIP_ComapnyManager_Message01">正在获取资料...</string>
    <string name="TIP_ComapnyManager_Message02">请输入关键字!</string>
    <string name="TIP_ComapnyManager_Message03">下载企业成功!</string>
    <string name="GEN_nodata">没有找到任何数据!</string>
    <string name="GEN_modify2">修改</string>
    <string name="GEN_Loading">正在与服务器交互数据...</string>
    <string name="action_cancle">取消</string>
    <string name="please_choose">请选择</string>
    <string name="down_qyxx">正在下载企业信息…</string>
    <string name="down_hxp">正在下载化学品信息…</string>
    <string name="down_wxy">正在下载危险源信息…</string>
    <string name="down_wxgy">正在下载危险工艺信息…</string>
    <string name="down_accident_list">正在下载信息..</string>
    <string name="zfry">执法人员</string>
    <string name="zfryId">执法人员证号</string>
    <string name="zgx">整改项</string>
    <string name="xqzgsj">限期整改时间</string>
    <string name="title_activity_test">testActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_soft_list">SoftListActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="dologin">登  录</string>
    <string name="remember_psw">记住密码</string>
    <string name="remember_log">自动登录</string>
    <string name="logSucess">登录成功</string>
    <string name="logFailed">登录失败</string>
    <string name="navigation">导航</string>
    <string name="main_title">路径规划</string>
    <string name="map_work">地图</string>
    <string name="power_work">计划工单</string>
    <string name="fault_work">事故工单</string>
    <string name="work_details">工单详情</string>
    <string name="route_title">线路规划</string>
    <string name="no_data_found">未查找数据!</string>
    <string name="station_name">基站名称:</string>
    <string name="station_address">基站地址:</string>
    <string name="prin">发电人:</string>
    <string name="transfer">转派</string>
    <string name="remark">备注:</string>
    <string name="work_picked">已接工单</string>
    <string name="work_missed">未接工单</string>
    <string name="work_carry">已完成工单</string>
    <string name="work_ison">正在发电</string>
</resources>